--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
@@ -191,7 +191,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p class="title-section">
-                                <b>Detalla de etapa</b>
+                                <b>Detalle de etapa</b>
                             </p>
                         </div>
                     </div>
