--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndexReport.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndexReport.cshtml
@@ -243,7 +243,7 @@
                     <td>
                         <div class="col-md-12">
                             <p class="title-section">
-                                <b>Detalla de etapa</b>
+                                <b>Detalle de etapa</b>
                             </p>
                         </div>
                         <table class="table table-sm">
