--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -74,6 +74,7 @@
                                             <option value="6">Autopista Barranca Larga - Ventanilla</option>
                                             <option value="7">AIFA</option>
                                             <option value="8">No Aplica</option>
+                                            <option value="9">PNS</option>
                                         </select>
                                     </div>
                                     <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
