--- a/PMCTool.App/Views/ProjectIndicators/Index.cshtml
+++ b/PMCTool.App/Views/ProjectIndicators/Index.cshtml
@@ -17,13 +17,14 @@
                     <div class="row justify-content-center mt-3">
                         <div class="col-12">
                             <div class="row">
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true })
+                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                    @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true }) 
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                    <select name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple data-live-search="true" data-actions-box="true">
                                         <option value="ARTF">Agencia Reguladora de Transporte Ferroviario</option>
-                                        <option value="DGC">DG Carretera</option>
+                                        <option value="DGCF">Dirección General de Carreteras Federales (DGCF)</option>
+                                        <option value="DGCRyA">Dirección General de Caminos Rurales y Alimentadores (DGCRyA)</option>
                                         <option value="DGCC">DG Conservación de Carreteras</option>
                                         <option value="DGDC">DG Desarrollo carretero</option>
                                         <option value="DGTFM">DG Transporte Ferroviario y Multimodal</option>
@@ -41,10 +42,15 @@
                                         <option value="7">Por Definir</option>
                                     </select>
                                 </div>
+
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="1">En ejecución</option>
-                                        <option value="2">En proceso para ejecución</option>
+                                        <option value="1">Potenciales</option>
+                                        <option value="2">Preparación</option>
+                                        <option value="3">En proceso de análisis</option>
+                                        <option value="4">Autorización</option>
+                                        <option value="5">Preparativos de ejecución</option>
+                                        <option value="6">Ejecución</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
@@ -66,6 +72,7 @@
                                         <option value="6">Autopista Barranca Larga - Ventanilla</option>
                                         <option value="7">AIFA</option>
                                         <option value="8">No Aplica</option>
+                                        <option value="9">PNS</option>
                                     </select>
                                 </div>
                                 <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
