#1081 PMCT.Analytics - ANALYTICS > DETALLE DE INDICADORES DE PROYECTOS > CORREGIR

--- a/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
+++ b/PMCTool.App/Views/ProjectIndicators/Indicator.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components;
 @model dynamic;
 @{
-    ViewData["Title"] = "Detalle de indicardores de proyecto";
+    ViewData["Title"] = "Detalle de indicadores de proyecto";
     Layout = "_Layout"; 
         var Code = "";
         var Name =  ""; 
@@ -44,7 +44,7 @@
                     <div class="col-md-10 pt-4">
                         <small class="font-weight-normal">Analytics</small>
                         <h4 class="Chapala align-items-center font-weight-bold  mb-0 mt-0">
-                            <span style="color: #235b4e !important;"> Detalle de indicardores de proyecto	</span>
+                            <span style="color: #235b4e !important;"> Detalle de indicadores de proyecto	</span>
                         </h4>
                         <small class="font-weight-normal">Proyecto</small>
                         <h4 class="mt-1 font-weight-bold">
@@ -77,7 +77,7 @@
                                                         else
                                                         {
                                                             <div class="row">
-                                                                <div class="col-md-12 text-center pb-3"><h3 style="font-weight: 500;">No hay dados del proyecto</h3></div>
+                                                                <div class="col-md-12 text-center pb-3"><h3 style="font-weight: 500;">No hay datos del proyecto</h3></div>
                                                             </div> 
                                                         }
                                                 }
